--- a/localisation/dec1_decisions_l_english.yml
+++ b/localisation/dec1_decisions_l_english.yml
@@ -151,6 +151,7 @@
  form_angevin_tt_1: "Owns core region: §YEngland§!"
  form_angevin_tt_2: "Owns core region: §YUpper France§!"
  form_angevin_tt_3: "Owns core region: §YLower France§!"
+ form_angevin_tt_4: "Owns core region: §YBrittany§!"
  
  #MODIFIERS
  
