--- a/localisation/dec1_decisions_l_english.yml
+++ b/localisation/dec1_decisions_l_english.yml
@@ -5,7 +5,7 @@
  swabia_nation_title: "Form The Swabian Kingdom"
  swabia_nation_desc: "The foundation of the Kingdom Swabia unites the hostile countries in the southern Holy Roman Empire. The country attains an important and mighty position in the empire in only few years."
  
- basque_country_nation_title: "Form the Basque Country"
+ basque_country_nation_title: "Form The Basque Country"
  basque_country_nation_desc: "The Basque Country is the name given to the home of the Basque people. The Basque country is located in the western Pyrenees, straddling the border between France and Spain on the coast of the Bay of Biscay. Euskal Herria is the oldest documented Basque name for the area they inhabit, dating from the 16th century."
  
  pontos_nation_title: "Restoration of The Kingdom of Pontus"
@@ -29,19 +29,19 @@
  two_sicilies_nation_title: "Restore The Kingdom of Two Sicilies"
  two_sicilies_nation_desc: "The kingdom of two Sicilies is the union between the Kingdom Sicily and the Kingdom Naples. Together these kingdoms can compete with the Spaniards just as with other Italians."
  
- italian_merchant_alliance_nation_title: "Form the Italian Merchant Alliance"
+ italian_merchant_alliance_nation_title: "Form The Italian Merchant Alliance"
  italian_merchant_alliance_nation_desc: "The Hansa in Northern Germany and the Italian Merchant Alliance in Italy: Extremely mighty, influential and hard to defeat."
  
- lombardy-venetia_nation_title: "Restore the Lombardy-Venetia Kingdom"
+ lombardy-venetia_nation_title: "Restore The Lombardy-Venetia Kingdom"
  lombardy-venetia_nation_desc: ""
  
- iberia_nation_title: "Form the Iberian Empire"
+ iberia_nation_title: "Form The Iberian Empire"
  iberia_nation_desc: ""
  
  austria-hungary_nation_title: "Form Austria-Hungary"
  austria-hungary_nation_desc: ""
  
- austro_hungarian_empire_nation_title: "Form the Austro-Hungarian Empire"
+ austro_hungarian_empire_nation_title: "Form The Austro-Hungarian Empire"
  austro_hungarian_empire_nation_desc: ""
  
  abyssinia_nation_title: "Form The Abyssinian Empire"
@@ -53,7 +53,7 @@
  north_sea_empire_nation_title: "Form The North Sea Empire"
  north_sea_empire_nation_desc: ""
  
- roman_empire_nation_title: "Restoration of the Roman Empire"
+ roman_empire_nation_title: "Restoration of The Roman Empire"
  roman_empire_nation_desc: ""
  
  rhine_confederation_nation_title: "Form The Rhine Confederation"
