--- a/Changelog.txt
+++ b/Changelog.txt
@@ -2,7 +2,7 @@ Changelog:
 
 Version 1.0.0
 -Rewrote entire mod for 1.28
--Rewrore template
+-Rewrote template
 -Rewrote Form Spain Military & Diplomatic
 -Rewrote Form Kingdom of Yugoslavia
 -Rewrote Form United Kingdom
@@ -11,6 +11,9 @@ Version 1.0.0
 -Rewrote Form Angevin Empire
 -Fixed localisation issues
 -Rewrote Form England
+-Rewrote Celtic Union
+-Rewrote Iberia
+-Rewrote Restore the Roman Empire
 
 
 Planned Content:
@@ -50,5 +53,16 @@ communist china
 romania
 tibet empire
 german empire
+greater german reich - fourth reich https://en.wikipedia.org/wiki/Greater_Germanic_Reich
 europan union diplomatically
 event for europe to invite all EU nations to join 
+frano-iberia - https://en.wikipedia.org/wiki/Franco-British_Union
+Greater Portugal https://en.wikipedia.org/wiki/Greater_Portugal
+catalan union https://en.wikipedia.org/wiki/Catalan_Republic_(1931)
+
+
+todo:
+create guide on website (use eu4 paradoxwiki template?)
+static modifiers
+events?
+ideas/traditions
