--- a/localisation/dec1_countries_l_english.yml
+++ b/localisation/dec1_countries_l_english.yml
@@ -23,10 +23,12 @@
  IMA_ADJ: "Italian"
  LVE: "Lombardy-Venetia"
  LVE_ADJ: "Lombardo-Venetian"
- IBE: "Iberia"
+ IBE: "Iberian Empire"
  IBE_ADJ: "Iberian"
- AHU: "Austria-Hungary"
- AHU_ADJ: "Austro-Hungarian"
+ AHE: "Austro-Hungarian Empire"
+ AHE_ADJ: "Austro-Hungarian"
+ HBE: "Austrian Empire"
+ HBE_ADJ: "Austrian"
  BTC: "Baltic Union"
  BTC_ADJ: "Baltic"
  RHE: "Rhine Confederation"
