--- a/localisation/dec1_decisions_l_english.yml
+++ b/localisation/dec1_decisions_l_english.yml
@@ -166,7 +166,7 @@
  form_austrian_empire_tt_1: "Owns all core §YAustrian§! provinces"
  form_austrian_empire_tt_2: "Owns all core §YHungarian§! provinces"
  form_austrian_empire_tt_3: "Subject owns all core §YHungarian§! provinces"
- form_austrian_empire_tt_4: "   owns all core §YHungarian§! provinces"
+ form_austrian_empire_tt_4: "   Owns all core §YHungarian§! provinces"
  
  
  #MODIFIERS
