--- a/localisation/dec1_countries_l_english.yml
+++ b/localisation/dec1_countries_l_english.yml
@@ -85,8 +85,8 @@
  ERO_ADJ: "Romagnan"
  ANG: "Angevin Empire"
  ANG_ADJ: "Angevin"
- SBG: "Siebenbürgen"
- SBG_ADJ: "Siebenbürgen-Saxon"
+ SBG: "Siebenbuergen"
+ SBG_ADJ: "Siebenbuergen-Saxon"
  FRL: "Frisia"
  FRL_ADJ: "Frisian"
  BVE: "Bremen-Verden"
