--- a/localisation/dec1_countries_l_english.yml
+++ b/localisation/dec1_countries_l_english.yml
@@ -25,10 +25,6 @@
  LVE_ADJ: "Lombardo-Venetian"
  IBE: "Iberian Empire"
  IBE_ADJ: "Iberian"
- AHE: "Austro-Hungarian Empire"
- AHE_ADJ: "Austro-Hungarian"
- HBE: "Austrian Empire"
- HBE_ADJ: "Austrian"
  BTC: "Baltic Union"
  BTC_ADJ: "Baltic"
  RHE: "Rhine Confederation"
@@ -91,3 +87,5 @@
  FRL_ADJ: "Frisian"
  BVE: "Bremen-Verden"
  BVE_ADJ: "Bremian"
+ AHK: "Austia-Hungary"
+ AHK_ADJ: "Austro-Hungarian"
