--- a/localisation/dec1_decisions_l_english.yml
+++ b/localisation/dec1_decisions_l_english.yml
@@ -6,7 +6,7 @@
  swabia_nation_title: "Form The Swabian Kingdom"
  swabia_nation_desc: "The foundation of the Kingdom Swabia unites the hostile countries in the southern Holy Roman Empire. The country attains an important and mighty position in the empire in only few years."
  
- basque_country_nation_title: "Form The Basque Country"
+ basque_country_nation_title: "Form The Basque Kingdom"
  basque_country_nation_desc: "The Basque Country is the name given to the home of the Basque people. The Basque country is located in the western Pyrenees, straddling the border between France and Spain on the coast of the Bay of Biscay. Euskal Herria is the oldest documented Basque name for the area they inhabit, dating from the 16th century."
  
  pontos_nation_title: "Restoration of The Kingdom of Pontus"
