--- a/localisation/dec1_countries_l_english.yml
+++ b/localisation/dec1_countries_l_english.yml
@@ -89,3 +89,7 @@
  BVE_ADJ: "Bremian"
  AHK: "Austia-Hungary"
  AHK_ADJ: "Austro-Hungarian"
+ HBE: "Austrian Empire"
+ HBE_ADJ: "Austrian"
+ AHE: "Austro-Hungarian Empire"
+ AHE_ADJ: "Austro-Hungarian"
