--- a/localisation/dec1_decisions_l_english.yml
+++ b/localisation/dec1_decisions_l_english.yml
@@ -48,7 +48,7 @@
  austria_hungary_nation_title: "Form the Austro-Hungarian Empire"
  austria_hungary_nation_desc: ""
  
- abyssinia_nation_title: "Form the Abyssinian Empire"
+ abyssinia_nation_title: "Reform the Abyssinian Empire"
  abyssinia_nation_desc: ""
  
  czechoslovakia_nation_title: "Form Czechoslovakia"
