--- a/localisation/dec1_countries_l_english.yml
+++ b/localisation/dec1_countries_l_english.yml
@@ -19,6 +19,8 @@
  NGC_ADJ: "German"
  TSI: "Two Sicilies"
  TSI_ADJ: "Sicilian"
+ ITE: "Italian Empire"
+ ITE_ADJ: "Italian"
  IMA: "Italian Merchant Alliance"
  IMA_ADJ: "Italian"
  LVE: "Lombardy-Venetia"
