Added the Jagiellonian Empire
Added the Jagiellonian Empire

--- a/localisation/dec1_countries_l_english.yml
+++ b/localisation/dec1_countries_l_english.yml
@@ -95,3 +95,5 @@
  HBE_ADJ: "Austrian"
  AHE: "Austro-Hungarian Empire"
  AHE_ADJ: "Austro-Hungarian"
+ JGE: "Jagiellonian Empire"
+ JGE_ADJ: "Jagiellonian"
