--- a/localisation/dec1_decisions_l_english.yml
+++ b/localisation/dec1_decisions_l_english.yml
@@ -147,5 +147,9 @@
  rename_ethiopia_nation_title: "Embrace Abyssinian Identity"
  rename_ethiopia_nation_desc: ""
  
+ jagiellonian_empire_nation_title: "Form the Jagiellonian Empire"
+ jagiellonian_empire_nation_desc: ""
  
+ jagiellonian_empire_nation_as_lithuania_title: "Form the Jagiellonian Empire"
+ jagiellonian_empire_nation_as_lithuania_desc: ""
  
