--- a/localisation/dec1_ideas_l_english.yml
+++ b/localisation/dec1_ideas_l_english.yml
@@ -8,7 +8,9 @@
  
  ADU_ideas: "Andalusian Ideas"
  
+ ADR_ideas: "Adriatic Ideas"
  
+ ALG_ideas: "Algerian Ideas"
  
  ##########################
  # END IDEAS LOCALISATION #
