--- a/localisation/dec1_countries_l_english.yml
+++ b/localisation/dec1_countries_l_english.yml
@@ -85,7 +85,7 @@
  ANG_ADJ: "Angevin"
  SBG: "Siebenbuergen"
  SBG_ADJ: "Siebenbuergen-Saxon"
- FRL: "Frisia"
+ FRL: "Frisian Kingdom"
  FRL_ADJ: "Frisian"
  BVE: "Bremen-Verden"
  BVE_ADJ: "Bremian"
