--- a/localisation/dec1_tooltips_l_english.yml
+++ b/localisation/dec1_tooltips_l_english.yml
@@ -8,6 +8,8 @@
  
  dec1_cisalpina_cannot_form_italy: "§R§YCisalpina§! can NOT form §YItaly§!§!"
  
+ dec1_papal_influence: "All neighbors of the newly elected pope gain §G25§! §YPapal Influence§!"
+ 
  dec1_formed_spain_add_claims: "§YSpain§! gains a permanent claim on §YIberia§! Region."
  
  form_united_kingdom_tt_1: "Owns core region: §YEngland§!"
