--- a/localisation/dec1_decisions_l_english.yml
+++ b/localisation/dec1_decisions_l_english.yml
@@ -34,43 +34,43 @@
  italian_merchant_alliance_nation_desc: "The Hansa in Northern Germany and the Italian Merchant Alliance in Italy: Extremely mighty, influential and hard to defeat."
  
  italian_empire_nation_title: "Form the Italian Empire"
- italian_empire_nation_desc: "" 
+ italian_empire_nation_desc: "The Italian Empire between 1936 and 1943, comprised the colonies, protectorates, concessions, dependencies and trust territories of the Kingdom of Italy. The genesis of the Italian colonial empire was the purchase in 1869 of Assab Bay on the Red Sea by an Italian navigation company which intended to establish a coaling station at the time the Suez Canal was being opened to navigation. This was taken over by the Italian government in 1882, becoming modern Italy's first overseas territory." 
  
  lombardy_venetia_nation_title: "Restore the Lombardy-Venetia Kingdom"
- lombardy_venetia_nation_desc: ""
+ lombardy_venetia_nation_desc: "The Kingdom of Lombardy–Venetia, commonly called the "Lombardo-Venetian Kingdom", was a constituent land (crown land) of the Austrian Empire. It was created in 1815 by resolution of the Congress of Vienna in recognition of the Austrian House of Habsburg-Lorraine's rights to Lombardy and the former Republic of Venice after the Napoleonic Kingdom of Italy, proclaimed in 1805, had collapsed."
  
- iberia_nation_title: "Form the Iberian Empire"
- iberia_nation_desc: ""
+ iberia_nation_title: "Restore the Iberian Union"
+ iberia_nation_desc: "The Iberian Union was the dynastic union of the Kingdom of Portugal and the Spanish Crown between 1580 and 1640, bringing the entire Iberian Peninsula, as well as Spanish and Portuguese overseas possessions, under the Spanish Habsburg kings Philip II, Philip III and Philip IV. The union began as a result of the Portuguese crisis of succession and the ensuing War of the Portuguese Succession."
  
  austrian_empire_nation_title: "Form the Austrian Empire"
- austrian_empire_nation_desc: ""
+ austrian_empire_nation_desc: "The Austrian Empire was a Central European multinational great power from 1804 to 1867, created by proclamation out of the realms of the Habsburgs. During its existence, it was the third most populous empire after the Russian Empire and the United Kingdom in Europe. Along with Prussia, it was one of the two major powers of the German Confederation. "
  
  austro_hungarian_empire_nation_title: "Form the Austro-Hungarian Empire"
- austro_hungarian_empire_nation_desc: ""
+ austro_hungarian_empire_nation_desc: "Austria-Hungary, often referred to as the Austro-Hungarian Empire or the Dual Monarchy, was a constitutional monarchy in Central and Eastern Europe between 1867 and 1918. It was formed when the Austrian Empire adopted a new constitution; as a result Austria and Hungary were placed on equal footing. It dissolved into several new states at the end of the First World War."
  
  abyssinia_nation_title: "Reform the Abyssinian Empire"
  abyssinia_nation_desc: ""
  
  czechoslovakia_nation_title: "Form Czechoslovakia"
- czechoslovakia_nation_desc: ""
+ czechoslovakia_nation_desc: "The First Czechoslovak Republic, often called The First Republic was the Czechoslovak state that existed from 1918 to 1938. The state was commonly called Czechoslovakia. It was composed of Bohemia, Moravia, Czech Silesia, Slovakia and Subcarpathian Ruthenia."
  
  north_sea_empire_nation_title: "Form the North Sea Empire"
- north_sea_empire_nation_desc: ""
+ north_sea_empire_nation_desc: "North Sea Empire and Anglo-Scandinavian Empire are terms used by historians to refer to the personal union of the kingdoms of England, Denmark and sometimes Norway for most of the period between 1013 and 1042 towards the end of the Viking Age. This ephemeral Norse-ruled empire was a thalassocracy, its components only connected by and dependent upon the sea."
  
  restore_roman_empire_nation_title: "Restoration of the Roman Empire"
- restore_roman_empire_nation_desc: ""
+ restore_roman_empire_nation_desc: "Not since the Romans in the second century has one empire commanded the entirety of the Mediterranean and beyond. If we claim this land, we can scoff at whatever pretenders may claim in Constantinople or the Holy Roman Empire and proclaim ourselves the true successors of Rome."
  
  rhine_confederation_nation_title: "Form the Rhine Confederation"
- rhine_confederation_nation_desc: ""
+ rhine_confederation_nation_desc: "Napoleon had annexed for France all the left bank of the Rhine, but the new Confederation gradually extended from the Rhine to the Elbe. It was at first welcomed by the German people as a step towards unity, but it was really a barrier against Prussian and Austrian power."
  
  cisalpina_nation_title: "Form Cisalpina"
- cisalpina_nation_desc: ""
+ cisalpina_nation_desc: "The Cisalpine Republic was a sister republic of France in Northern Italy that lasted from 1797 to 1802, The flag of the Cisalpine Republic was the Transpadane vertical Italian tricolour, with the square shape of the Cispadane flag."
  
  turkey_nation_title: "Form Turkey"
- turkey_nation_desc: ""
+ turkey_nation_desc: "The Republic of Turkey was created after the overthrow of Sultan Mehmet VI Vahdettin by the new Republican Parliament in 1922. This new regime delivered the coup de grâce to the Ottoman state which had been practically wiped away from the world stage following the First World War."
  
  china_nation_title: "Form China"
- china_nation_desc: ""
+ china_nation_desc: "The earliest known written records of the history of China date from as early as 1250 BC, from the Shang dynasty 1600–1046 BC, during the king Wu Ding's reign."
  
  europe_nation_title: "Form the European Union"
  europe_nation_desc: "The union's purpose is to promote peace, establish a unified economic and monetary system, promote inclusion and combat discrimination, break down barriers to trade and borders, encourage technological and scientific developments, champion environmental protection, and, among others, promote goals like a competitive global market and social progress."
@@ -79,10 +79,10 @@
  soviet_union_nation_desc: "The Soviet Union (short for the Union of Soviet Socialist Republics or USSR) is a single-party Marxist–Leninist state. It was the first country to declare itself socialist and build towards a communist society and was a union of 14 Soviet Socialist Republics and one Soviet Federative Socialist Republic.
  
  celtic_union_nation_title: "Form the Celtic Union"
- celtic_union_nation_desc: "" 
+ celtic_union_nation_desc: "Celticism is a political, social and cultural movement advocating solidarity and cooperation between Celtic nations; through conquest we are able to unite our people under one nation!" 
  
  sweden-norway_nation_title: "Form Sweden-Norway"
- sweden-norway_nation_desc: ""
+ sweden-norway_nation_desc: "Sweden and Norway had been united under the same crown on two occasions: from 1319 to 1343 and briefly from 1449 to 1450 in opposition to Christian of Oldenburg who was elected king of the Kalmar Union by the Danes."
  
  caucasia_nation_title: "Form Caucasia"
  caucasia_nation_desc: ""
@@ -94,34 +94,34 @@
  united_kingdom_nation_desc: ""
  
  maghrebia_nation_title: "Form Maghreb"
- maghrebia_nation_desc: ""
+ maghrebia_nation_desc: "Maghreb; also spelled Maghrib, region of North Africa bordering the Mediterranean Sea. The Africa Minor of the ancients, it at one time included Moorish Spain and now comprises essentially the Atlas Mountains and the coastal plain of Morocco, Algeria, Tunisia, and Libya."
  
  tatarstan_nation_title: "Form Tatarstan"
  tatarstan_nation_desc: ""
  
  lower_saxony_nation_title: "Form Lower Saxony"
- lower_saxony_nation_desc: ""
+ lower_saxony_nation_desc: "Lower Saxony, German Niedersachsen, Land of Germany; The country's second largest state in size, Lower Saxony occupies an important band of territory across the northwestern part of the country."
  
  adriatic_empire_nation_title: "Form the Adriatic Empire"
  adriatic_empire_nation_desc: ""
  
  himalayan_empire_nation_title: "Form the Himalayan Empire"
- himalayan_empire_nation_desc: ""
+ himalayan_empire_nation_desc: "The Himalaya Empire was a mountainous country in Himalayas mentioned in the Puranas, the Indian epic Mahabharata doesn't mention a kingdom named Himalaya, but mentions many kingdoms in the Himalaya mountains like the Kuninda Kingdom, Parvata Kingdom, Nepa Kingdom, Kirata Kingdom, Kimpurusha Kingdom, Kinnara Kingdom etc."
  
  alsace_lorraine_nation_title: "Form Alsace-Lorraine"
  alsace_lorraine_nation_desc: ""
  
  franco_iberia_nation_title: "Form Franco-Iberia"
- franco_iberia_nation_desc: ""
+ franco_iberia_nation_desc: "The Franco-Iberian Empire is is a cultural hegemony consisting of Portugal, Spain, France under one Emperor"
  
  hesse_nassau_nation_title: "Form Hesse-Nassau"
  hesse_nassau_nation_desc: ""
  
  east_prussia_nation_title: "Form East Prussia"
- east_prussia_nation_desc: ""
+ east_prussia_nation_desc: "Its capital city was Königsberg. East Prussia was the main part of the region of Prussia along the southeastern Baltic Coast. The bulk of the ancestral lands of the Baltic Old Prussians were enclosed within East Prussia."
  
  hanse_nation_title: "Form Hansa"
- hanse_nation_desc: ""
+ hanse_nation_desc: "The Hanseatic League was a commercial and defensive confederation of merchant guilds and market towns in Northwestern and Central Europe. Growing from a few North German towns in the late 1100s, the league came to dominate Baltic maritime trade for three centuries along the coasts of Northern Europe. Hansa territories stretched from the Baltic to the North Sea and inland during the Late Middle Ages."
  
  emilia_romagna_nation_title: "Form Emilia-Romagna"
  emilia_romagna_nation_desc: ""
@@ -132,14 +132,14 @@
  bremen_verden_nation_title: "Form Bremen-Verden"
  bremen_verden_nation_desc: ""
  
- frieslande_nation_title: "Form Frisia"
- frieslande_nation_desc: ""
+ frieslande_nation_title: "Restore the Frisian Kingdom"
+ frieslande_nation_desc: "The Frisian Kingdom, also known as Magna Frisia, is a modern name for the Frisian realm in the period when it was at its largest (650-734). This empire was ruled by kings and emerged in the mid-7th century and probably ended with the Battle of the Boarn in 734 when the Frisians were defeated by the Frankish Empire."
  
  siebenbuergen_nation_title: "Form Siebenbuergen"
  siebenbuergen_nation_desc: "Siebenbuergen means "Seven Castles", named after the seven Transylvanian Saxons' cities. With the formation of a unified state through both diplomatic and militaristic means we are able to establish a new state based upon the foundation of our Germanic legacy."
  
  great_britain_nation_title: "Form Great Britain"
- great_britain_nation_desc: ""
+ great_britain_nation_desc: "The Treaty of Union specified the name of the new all-island state as "Great Britain", while describing it as "One Kingdom". therefore, the all-island state that existed between 1707 and 1800 is "Great Britain" or the "Kingdom of Great Britain"."
  
  baltic_union_nation_title: "Form Baltic Union"
  baltic_union_nation_desc: ""
@@ -148,8 +148,11 @@
  rename_ethiopia_nation_desc: ""
  
  jagiellonian_empire_nation_title: "Form the Jagiellonian Empire"
- jagiellonian_empire_nation_desc: ""
+ jagiellonian_empire_nation_desc: "The Jagiellonian dynasty was a royal dynasty, founded by Jogaila, the Grand Duke of Lithuania, who in 1386 was baptized as Władysław, married Queen regnant Jadwiga of Poland, and was crowned King of Poland as Władysław II Jagiełło. The dynasty reigned in several Central European countries between the 14th and 16th centuries. Members of the dynasty were Kings of Poland (1386–1572), Grand Dukes of Lithuania (1377–1392 and 1440–1572), Kings of Hungary (1440–1444 and 1490–1526), and Kings of Bohemia (1471–1526)."
  
  jagiellonian_empire_nation_as_lithuania_title: "Form the Jagiellonian Empire"
- jagiellonian_empire_nation_as_lithuania_desc: ""
+ jagiellonian_empire_nation_as_lithuania_desc: "The Jagiellonian dynasty was a royal dynasty, founded by Jogaila, the Grand Duke of Lithuania, who in 1386 was baptized as Władysław, married Queen regnant Jadwiga of Poland, and was crowned King of Poland as Władysław II Jagiełło. The dynasty reigned in several Central European countries between the 14th and 16th centuries. Members of the dynasty were Kings of Poland (1386–1572), Grand Dukes of Lithuania (1377–1392 and 1440–1572), Kings of Hungary (1440–1444 and 1490–1526), and Kings of Bohemia (1471–1526)."
+ 
+ papal_states_nation_title: "Restore the Papal States"
+ papal_states_nation_desc: "Without God man neither knows which way to go, nor even understands who he is... One of the deepest forms of poverty a person can experience is isolation... "
  
