--- a/localisation/dec1_decisions_l_english.yml
+++ b/localisation/dec1_decisions_l_english.yml
@@ -156,3 +156,9 @@
  papal_states_nation_title: "Restore the Papal States"
  papal_states_nation_desc: "Without God man neither knows which way to go, nor even understands who he is... One of the deepest forms of poverty a person can experience is isolation... "
  
+ spanish_nation_militarily_title: "Form Spain"
+ spanish_nation_militarily_desc: ""
+ 
+ spanish_nation_diplomatically_title: "Unite Spanish Nation"
+ spanish_nation_diplomatically_desc: ""
+ 
