--- a/localisation/dec1_decisions_l_english.yml
+++ b/localisation/dec1_decisions_l_english.yml
@@ -126,8 +126,8 @@
  emilia_romagna_nation_title: "Form Emilia-Romagna"
  emilia_romagna_nation_desc: ""
  
- angevin_nation_title: "Form the Angevin Empire"
- angevin_nation_desc: "The Angevin Empire describes the possessions of the Angevin kings of England who held lands in England and France during the 12th and 13th centuries. Its rulers were Henry II, Richard I, and John. the Angevin Empire is an early example of a composite state and as such poses a threat to the stability of feudal europe."
+ angevin_empire_nation_title: "Form the Angevin Empire"
+ angevin_empire_nation_desc: "The Angevin Empire describes the possessions of the Angevin kings of England who held lands in England and France during the 12th and 13th centuries. Its rulers were Henry II, Richard I, and John. the Angevin Empire is an early example of a composite state and as such poses a threat to the stability of feudal europe."
  
  bremen_verden_nation_title: "Form Bremen-Verden"
  bremen_verden_nation_desc: ""
